--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Menjalankan workflow di Ubuntu environment
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
