Add view and optimize clear commands to deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,5 @@ jobs:
             composer install --no-dev
             php artisan migrate --force
             php artisan cache:clear
+            php artisan view:clear
+            php artisan optimize:clear
