--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
             git pull origin main
             composer install --no-dev
             php artisan migrate --force
+            php artisan db:seed
             php artisan cache:clear
             php artisan view:clear
             php artisan optimize:clear
