--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
   "categories": ["sports", "fitness", "lifestyle"],
   "icons": [
     {
-      "src": "/images/favicon-192x192.png",
+      "src": "/images/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
