--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+/ruanglaricom
+/ruanglari
+.htaccess
+/public/BingSiteAuth.xml
+/public/error_log
+/public/google35342226d437cbea.html
+/public/lomba/
+        
