--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^12.0",
         "laravel/socialite": "*",
         "laravel/tinker": "^2.10.1",
-        "midtrans/midtrans-php": "^2.6"
+        "midtrans/midtrans-php": "^2.6",
+        "openspout/openspout": "^4.28"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
